# returns

./: .coverage_skip.py  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ex.py  example.py  pyproject.toml  setup.cfg  test.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug.md  config.yml
.github/workflows/: codspeed.yml  misspell.yml  test.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: default.pyi  returns._generated.converters.coalesce.imports  returns._generated.converters.flatten.imports  returns._generated.futures._future.imports  returns._generated.futures._future.imports-1  returns._generated.futures._future_result.imports  returns._generated.pipeline.flow.imports  returns.context.__init__.imports  returns.context.requires_context.imports  returns.context.requires_context_io_result.imports  returns.context.requires_context_io_result.imports-1  returns.context.requires_context_result.imports  returns.contrib.mypy.decorator_plugin.imports  returns.contrib.pytest.plugin.imports  returns.converters.imports  returns.future.imports  returns.instances.imports  returns.io.imports  returns.pipeline.imports  returns.pointfree.imports  returns.primitives.container.imports  returns.primitives.exceptions.imports  returns.primitives.types.imports  returns.result.imports
benchmarks/: curry-requirements.txt  curry.py  test_benchmarks.py
docs/: Makefile  conf.py  index.rst  make.bat  plugin.py  requirements.txt
docs/_static/: overrides.css
docs/_templates/: layout.html  moreinfo.html
docs/pages/: changelog.rst  container.rst  context.rst  converters.rst  create-your-own-container.rst  curry.rst  development.rst  do-notation.rst  either.rst  functions.rst  future.rst  hkt.rst  instances.rst  interfaces.rst  io.rst  maybe.rst  methods.rst  monad.rst  pipeline.rst  pointfree.rst  quickstart.rst  railway.rst  result.rst  tracing.rst  trampolines.rst  transducers.rst  types.rst  unsafe.rst
dry_monads/: do_notation.py  either.py  functions.py  maybe.py
dry_monads/primitives/: exceptions.py  monad.py  types.py
returns/: __init__.py  context.py  converters.py  converters.pyi  curry.py  do_notation.py  do_notation.pyi  either.py  either.pyi  functions.py  functions.pyi  future.py  hkt.py  instances.py  io.py  io.pyi  iterables.py  maybe.py  maybe.pyi  pipeline.py  pipeline.pyi  pointfree.py  pointfree.pyi  reader.py  result.py  result.pyi  tracing.py  trampolines.py  unsafe.py  unsafe.pyi
returns/_generated/: __init__.py  box.pyi  coalesce.py  flatten.py  flatten.pyi  fold.py  iterable.py  pipe.py  pipe.pyi  pipeline.pyi  squash.py  squash.pyi
returns/_internal/: iterable.py
returns/context/: __init__.py  requires_context.py  requires_context_future_result.py  requires_context_io_result.py  requires_context_ioresult.py  requires_context_result.py
returns/interfaces/: altable.py  applicative.py  async_.py  bimappable.py  bindable.py  container.py  equable.py  equality.py  failable.py  filterable.py  iterable.py  lashable.py  mappable.py  rescuable.py  swappable.py  unwrappable.py
returns/io/: __init__.py  io.py  ioresult.py  lazyio.py
returns/iterables/: fold.py
returns/methods/: __init__.py  alt.py  apply.py  async_.py  bind.py  bind_async.py  bind_async_future.py  bind_async_future_result.py  bind_awaitable.py  bind_context.py  bind_context_result.py  bind_future.py  bind_future_result.py  bind_io.py  bind_ioresult.py  bind_optional.py  bind_result.py  compose_result.py  cond.py  gather.py  map.py  modify_env.py  partition.py  rescue.py  swap.py  unify.py  unwrap_or_failure.py
returns/mypy_plugins/: decorator.py
returns/pointfree/: __init__.py  alt.py  apply.py  bimap.py  bind.py  bind_async.py  bind_async_context_future_result.py  bind_async_future.py  bind_async_future_result.py  bind_awaitable.py  bind_context.py  bind_context_future_result.py  bind_context_ioresult.py  bind_context_result.py  bind_future.py  bind_future_result.py  bind_io.py  bind_ioresult.py  bind_optional.py  bind_result.py  compose_result.py  cond.py  filter.py  lash.py  map.py  modify_env.py  rescue.py  unify.py
returns/primitives/: asserts.py  container.py  container.pyi  exceptions.py  exceptions.pyi  hkt.py  interfaces.py  iterables.py  laws.py  monad.py  monad.pyi  reawaitable.py  tracing.py  types.py  types.pyi
returns/transducers/: __init__.py  tfilter.py  tmap.py  transducers.py
returns/typeclasses/: applicative.py  functor.py  monad.py
test_partial/: test_partial.py
tests/: conftest.py  test_laws.py  test_pattern_matching.py  test_public_api.py  test_slots.py
tests/test_context/: test_context.py  test_context_equality.py  test_context_utils.py
tests/test_converters/: test_coalesce.py  test_flatten.py  test_fold.py  test_join.py  test_maybe_to_result.py  test_result_to_maybe.py  test_squash_io.py  test_swap.py
tests/test_curry/: test_curry.py  test_eager_curry.py  test_lazy_curry.py  test_partial.py
tests/test_do_notation/: test_do_notation.py
tests/test_either/: test_bind.py  test_either_aliases.py  test_either_bind.py  test_either_equality.py  test_either_failure.py  test_either_fmap.py  test_either_unwrap.py  test_either_value_or.py  test_equality.py  test_fmap.py  test_unwrap.py  test_value_or.py
tests/test_examples/: test_pair1.py  test_pair2.py  test_pair3.py  test_pair4.py
tests/test_functions/: test_box.py  test_compose.py  test_is_io.py  test_is_successful.py  test_pipeline.py  test_raise_exception.py  test_safe.py
tests/test_future/: test_add_note_future_safe.py
tests/test_instances/: test_is_io.py  test_is_result.py
tests/test_io/: test_add_note_impure_safe.py  test_io.py  test_io_equality.py  test_io_pickle.py  test_lift.py
tests/test_iterables/: test_collect_all.py  test_fail_fast.py
tests/test_maybe/: test_maybe_base.py  test_maybe_bind.py  test_maybe_conversions.py  test_maybe_equality.py  test_maybe_failure.py  (+9 more)
(+508 files in other folders)
