[tool.poetry]
name = "returns"
version = "0.23.0"
description = "Make your functions return something meaningful, typed, and safe!"
license = "BSD-3-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/returns"
homepage = "https://returns.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "monads",
  "monad",
  "monad transformers",
  "composition",
  "type-safety",
  "mypy",
  "railway-oriented-programming"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Framework :: Hypothesis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/dry-python"

[tool.poetry.plugins.pytest11]
returns = "returns.contrib.pytest.plugin"

[tool.poetry.plugins.hypothesis]
_ = "returns.contrib.hypothesis._entrypoint"


[tool.poetry.dependencies]
python = "^3.9"

typing-extensions = ">=4.0,<5.0"
mypy = { version = ">=1.10,<1.11", optional = true }
pytest = { version = "^8.0", optional = true }
hypothesis = { version = "^6.98", optional = true }

[tool.poetry.group.dev.dependencies]
anyio = "^4.3"
trio = "^0.25"
attrs = "^23.2"
httpx = "^0.27"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
flake8-pyi = "^24.1"
nitpick = "^0.35"
codespell = "^2.2"
slotscheck = "^0.19"

pytest-cov = "^5.0"
pytest-randomly = "^3.12"
pytest-mypy-plugins = "^3.1"
pytest-subtests = "^0.12"
pytest-shard = "^0.1"

doc8 = "^1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]

sphinx = "^7.3"
sphinx-autodoc-typehints = "^1.23"
sphinxcontrib-mermaid = "^0.9"
furo = "^2024.5"
m2r2 = "^0.3"
tomli = "^2.0"

[tool.poetry.extras]
compatible-mypy = ["mypy"]
check-laws = ["pytest", "hypothesis"]


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.slotscheck]
strict-imports = true
require-subclass = true
require-superclass = true
exclude-modules = 'returns\.contrib\.'
exclude-classes = 'returns\.primitives\.exceptions:UnwrapFailedError'
